<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bgi"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <EditText
        android:id="@+id/login_et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="40dp"
        android:hint="@string/et_phone_input"
        android:numeric="integer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/login_et_pwd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:password="true"
            android:hint="@string/et_pwd_input" />

        <ImageView
            android:id="@+id/login_img_hide"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:src="@drawable/close_eyes" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_tv_skipToReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:text="暂无账号？立即注册"
        android:textAlignment="textEnd" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/btn_login" />

</LinearLayout>
