<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="23dp"
    tools:context="com.xaoyv.small.activity.InfomationActivity">

    <ImageView
        android:id="@+id/infomation_img_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/tv_infomation"
        android:textSize="23sp" />

    <LinearLayout
        android:id="@+id/infomation_ll_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infomation_img_back"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/tv_my_hd"
                android:textSize="18sp" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/infomation_img_hd"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/tv_my_nickname"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/infomation_tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:gravity="center" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCC" />
    </LinearLayout>

    <Button
        android:id="@+id/infomation_btn_disLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/infomation_ll_info"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_infomation_unLogin" />

</RelativeLayout>
